# voxelizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  buffer.h  checks.h  enums.h  flatten_index.h  index_buffer.h  main.cpp  merge.h  merge_out_gnu.h  merge_out_msv.h  raster_results.h  rasterizer.h  rasterizer_fast.h  rasterizer_hollow.h  rasterizer_safe.h  rules.h  timer.h  vox_file.h  voxelizer.h  voxelizer.hpp  voxelizer.ipp  xml_config.h
